# benchmarking-orchestration

./: .gitignore  AGENTS.md  LICENSE  README.md  cloud_init.sh  pyproject.toml
.github/workflows/: ci.yml
src/benchmarking_orchestration/: __init__.py  __main__.py  capabilities.py  cloud_init.py  commands.py  normalization.py  task_id.py
src/benchmarking_orchestration/aws/: __init__.py
src/benchmarking_orchestration/bench/: __init__.py
src/benchmarking_orchestration/tasks/: __init__.py
tests/: test_aws.py  test_bench.py  test_cli.py
