[project]
authors = [{name = "Ethan Holz", email = "ethan.holz@omsf.io"}]
dependencies = ["sqlalchemy-libsql>=0.2.0"]
name = "benchmarking-orchestration"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
benchmarking_orchestration = { path = ".", editable = true }
exorcist = {git = "https://github.com/OpenFreeEnergy/exorcist"}

[tool.pixi.dependencies]
click = ">=8.3.1,<9"
boto3 = ">=1.42.46,<2"
python = "==3.13" # sqlalchemy-libsql does not work on Python 3.14 in testing

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["test", "dev"]}
bench = {features = ["bench"]}

[tool.pixi.feature.test.dependencies]
pytest-xdist = ">=3.8.0,<4"
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
moto = ">=5.1.21,<6"

[tool.pixi.feature.test.tasks]
test = "pytest -q -n auto"

[tool.pixi.feature.dev.dependencies]
ruff = "*"

[tool.pixi.feature.dev.tasks]
fmt = "ruff format"
check = "ruff check"

[tool.pixi.feature.bench]
platforms = ["linux-64", "osx-arm64"]
system-requirements = {cuda = "12.1"}

[tool.pixi.feature.bench.dependencies]
openfe = "==1.9.1"
pandas = ">=2.0,<3"

